Fixed shadows on mobile - increased precision for the variables that need it for shadow mapping to work correctly - enabling shadows now requires highp fragment shader support, the game checks for it as with the other requirements - minor: line numbers in shader preview in the editor cannot be selected anymore

--- a/src/scss/editor.scss
+++ b/src/scss/editor.scss
@@ -652,6 +652,7 @@ h1.glsl-header {
 .shader-line-number {
     width: 2em;
     color: #888888;
+    user-select: none;
 }
 
 *:not(.glsl-comment) > .glsl-keyword {
